# SPoVM_capstone_project

./: .gitignore  ArchiveHandler.cpp  ArchiveHandler.h  CMakeLists.txt  DirectoryTransfer.cpp  DirectoryTransfer.h  FTPClient.cpp  FTPClient.h  FileTransfer.cpp  FileTransfer.h  README.md  main.cpp
Documentation/: Capstone Project.docx  Capstone Project2.docx  Class diagram.drawio  Class model.docx  System Design.docx  Task.docx  Title.docx  ~$Class diagram.drawio.dtmp  ~$Task.docx  ~$ass model.docx  ~$pstone Project.docx  ~$stem Design.docx
FTPClient/: CMakeLists.txt  Makefile  build_script.sh  ftp-client.c  howtodo.txt
FTPClient/release/: ftp-client
FTPClient/release/Kokhanovsky_H.E/course_work/: ftp-client.c
FTPClient/release/Kokhanovsky_H.E/course_work/Documentation/: howtodo.txt
